# imagemagick

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json
ImageMagick6-cmake/: CMakeLists.txt  configure.sh
app/: index.d.ts  index.js
core/: Arguments.h  Preprocessor.ts  README.md  Tokenizer.ts  index.ts  tsconfig.json
pkgconfig/: index.ts  tsconfig.json
scripts/: PkgConfigFileParser.ts  build-all.sh  configure-imagemagick.sh  index.ts  tsconfig.json
src/: CMakeLists.txt  CoderInfo.cpp  CoderInfo.h  Color.cpp  Color.h  Constants.cpp  Constants.h  Geometry.cpp  Geometry.h  Image.cpp  Image.h  Point.cpp  Point.h  TypeConverter.cpp  TypeConverter.h  main.cpp
test/: .gitignore  test.ts  tsconfig.json
utils/: generate-flag-files.ts  tsconfig.json
